--- a/online_store/templates/account.html
+++ b/online_store/templates/account.html
@@ -9,8 +9,10 @@
     >
     <h2>{{ current_user.username }}</h2>
     <p>{{ current_user.email }}</p>
-    {% if current_user.is_employee or current_user.is_admin %}
-      <a href="{{ url_for('admin.home') }}"><button>Go To Admin</button></a>
+    {% if current_user.is_admin %}
+      <a href="{{ url_for('admin.show_employees') }}"><button>Admin Dashboard</button></a>
+    {% elif current_user.is_employee %}
+      <a href="{{ url_for('admin.show_products') }}"><button>Employee Dashboard</button></a>
     {% endif %}
     <a href="{{ url_for('users.logout') }}"><button>Log Out</button></a>
   </div>
