--- a/online_store/templates/product_details.html
+++ b/online_store/templates/product_details.html
@@ -14,7 +14,7 @@
   </div>
   <div class="product-detail-text">
     <h2>{{ product.category }}</h2>
-    <p>In Stock: {{ product.quantity }}</p>
+    <p>In Stock: <span class="in-stock">{{ product.quantity }}</span></p>
     <h3>{{ product.name }}</h3>
     <h4>${{ product.price }}</h4>
     <form class="product-detail-form" method="POST">
@@ -31,7 +31,7 @@
         {{ form.quantity(class="form-quantity", min="1", max=product.quantity) }}
       {% endif %}
     </form>
-    <button type="button" onclick="addManyToCart({{ product.id }})">Add To Cart</button>
+    <button type="button" class="add-to-cart" onclick="addManyToCart({{ product.id }})">Add To Cart</button>
   </div>
 </div>
 
