added additional error handling

--- a/online_store/templates/errors/500.html
+++ b/online_store/templates/errors/500.html
@@ -2,6 +2,6 @@
 {% block title %}Page Not Found{% endblock %}
 
 {% block content %}
-<h1>We couldn't find the wood you were looking for.</h1>
+<h1>Looks like we chopped down the wrong tree.</h1>
 <a href="/"><button>Head On Home</button></a>
 {% endblock %}
