fixed remember me slider

--- a/online_store/templates/login.html
+++ b/online_store/templates/login.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
+{% block head %}
+{{ super() }}
+
+<script type="text/javascript" src="{{ url_for('static', filename='scripts/login.js') }}" defer></script>
+
+{% endblock %}
 {% block content %}
 
 <div class="login">
